# lipcoding-2026-challenge

./: .env.example  .gitignore  AGENTS.md  AZURE_DEPLOYMENT_COMPLETE.md  AZURE_DEPLOYMENT_INFO.md  Dockerfile  Dockerfile.frontend  PRD.md  README.md  deployment_log.txt  package-lock.json  package.json  skills-lock.json
.github/instructions/: backend.instructions.md  frontend-design.instructions.md  frontend.instructions.md
.github/workflows/: deploy.yml
architecture/: MICROSERVICES_ARCHITECTURE.md
backend/: README.md  package.json  pyproject.toml
backend/app/: analysis.py  api.py  auth.py  main.py  models.py  repository.py  service.py
backend/src/: database.ts  index.ts
backend/src/config/: index.ts
backend/src/middleware/: auth.ts
backend/src/models/: user.ts
backend/src/routes/: user.ts
backend/src/services/: analyzeService.ts  userService.ts
backend/tests/: test_analysis_service.py  test_api_analyze.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_task_service.py
deployment/: AZURE_DEPLOYMENT.md  DEPLOYMENT.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_STATUS.md  README.md
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  tsconfig.json
infra/: main.bicep
knowledge-base/: AGENT_REFERENCE.md  COMPONENT_LIBRARY_GUIDE.md  README.md
plan/: 01-product-plan.md  02-architecture.md  03-implementation-timeline.md  04-delivery-checklist.md  05-demo-script.md  06-copilot-prompts.md  07-task-breakdown.md  08-evaluation-strategy.md  09-multi-agent-collaboration.md  README.md
scripts/: deploy.sh
(+17 files in other folders)
